--- a/house-prices-catboost-rf.ipynb
+++ b/house-prices-catboost-rf.ipynb
@@ -551,41 +551,52 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Learning rate set to 0.042447\n",
-      "0:\tlearn: 77103.7424392\ttotal: 25.7ms\tremaining: 25.7s\n",
-      "100:\tlearn: 22067.7121893\ttotal: 2.51s\tremaining: 22.4s\n",
-      "200:\tlearn: 17255.8059343\ttotal: 5.07s\tremaining: 20.2s\n",
-      "300:\tlearn: 15068.7432482\ttotal: 8.15s\tremaining: 18.9s\n",
-      "400:\tlearn: 13513.8558853\ttotal: 11.1s\tremaining: 16.6s\n",
-      "500:\tlearn: 12307.7530731\ttotal: 14.2s\tremaining: 14.1s\n",
-      "600:\tlearn: 11300.2097941\ttotal: 17.2s\tremaining: 11.4s\n",
-      "700:\tlearn: 10433.9054651\ttotal: 20.3s\tremaining: 8.64s\n",
-      "800:\tlearn: 9691.8503530\ttotal: 22.9s\tremaining: 5.7s\n",
-      "900:\tlearn: 8995.0082425\ttotal: 25.6s\tremaining: 2.81s\n",
-      "999:\tlearn: 8324.1663751\ttotal: 28.3s\tremaining: 0us\n"
+      "Learning rate set to 0.022029\n",
+      "0:\tlearn: 78258.8342291\ttotal: 52.8ms\tremaining: 2m 38s\n",
+      "100:\tlearn: 29644.3000123\ttotal: 5.32s\tremaining: 2m 32s\n",
+      "200:\tlearn: 21281.6559990\ttotal: 11.3s\tremaining: 2m 37s\n",
+      "300:\tlearn: 18314.0267202\ttotal: 17.3s\tremaining: 2m 35s\n",
+      "400:\tlearn: 16687.7984936\ttotal: 22.8s\tremaining: 2m 28s\n",
+      "500:\tlearn: 15511.8152235\ttotal: 27.8s\tremaining: 2m 18s\n",
+      "600:\tlearn: 14572.1774516\ttotal: 33.6s\tremaining: 2m 14s\n",
+      "700:\tlearn: 13870.4655927\ttotal: 39.1s\tremaining: 2m 8s\n",
+      "800:\tlearn: 13199.8683065\ttotal: 43.6s\tremaining: 1m 59s\n",
+      "900:\tlearn: 12613.9864795\ttotal: 47.4s\tremaining: 1m 50s\n",
+      "1000:\tlearn: 11999.8366966\ttotal: 52.4s\tremaining: 1m 44s\n",
+      "1100:\tlearn: 11434.9199181\ttotal: 58s\tremaining: 1m 40s\n",
+      "1200:\tlearn: 10963.0767324\ttotal: 1m 3s\tremaining: 1m 34s\n",
+      "1300:\tlearn: 10489.8794049\ttotal: 1m 8s\tremaining: 1m 29s\n",
+      "1400:\tlearn: 10080.8809878\ttotal: 1m 14s\tremaining: 1m 24s\n",
+      "1500:\tlearn: 9665.6734467\ttotal: 1m 19s\tremaining: 1m 19s\n",
+      "1600:\tlearn: 9286.1186442\ttotal: 1m 25s\tremaining: 1m 14s\n",
+      "1700:\tlearn: 8931.4519766\ttotal: 1m 30s\tremaining: 1m 9s\n",
+      "1800:\tlearn: 8591.2232908\ttotal: 1m 35s\tremaining: 1m 3s\n",
+      "1900:\tlearn: 8259.8230078\ttotal: 1m 41s\tremaining: 58.5s\n",
+      "2000:\tlearn: 7955.4476691\ttotal: 1m 46s\tremaining: 53.3s\n",
+      "2100:\tlearn: 7639.8115619\ttotal: 1m 52s\tremaining: 48s\n",
+      "2200:\tlearn: 7357.1707248\ttotal: 1m 57s\tremaining: 42.7s\n",
+      "2300:\tlearn: 7070.1048970\ttotal: 2m 3s\tremaining: 37.4s\n",
+      "2400:\tlearn: 6821.3670297\ttotal: 2m 8s\tremaining: 32s\n",
+      "2500:\tlearn: 6578.5532223\ttotal: 2m 13s\tremaining: 26.7s\n",
+      "2600:\tlearn: 6332.4239528\ttotal: 2m 19s\tremaining: 21.4s\n",
+      "2700:\tlearn: 6091.6023688\ttotal: 2m 24s\tremaining: 16s\n",
+      "2800:\tlearn: 5871.4038890\ttotal: 2m 29s\tremaining: 10.6s\n",
+      "2900:\tlearn: 5664.5688438\ttotal: 2m 35s\tremaining: 5.3s\n",
+      "2999:\tlearn: 5460.0927244\ttotal: 2m 40s\tremaining: 0us\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<catboost.core.CatBoostRegressor at 0x7f47aa3ee2d0>"
+       "<catboost.core.CatBoostRegressor at 0x7f220bade910>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -593,12 +604,12 @@
    "source": [
     "# Initialize CatBoostRegressor\n",
     "model = CatBoostRegressor(\n",
-    "    iterations=1000,                # Number of trees\n",
+    "    iterations=3000,                # Number of trees\n",
     "    depth=6,                       # Depth of each tree\n",
     "    boosting_type='Plain',         # Use random forest mode\n",
     "    bootstrap_type='Poisson',    # Random sampling of data points\n",
     "    task_type='GPU',               # GPU is needed for Poisson\n",
-    "    subsample=0.8,                 # Fraction of data to sample\n",
+    "    subsample=0.9,                 # Fraction of data to sample\n",
     "    # random_seed=42,                # Seed for reproducibility\n",
     "    verbose=100,                   # Output training progress every 100 iterations\n",
     "    cat_features=categorical_columns.to_list()\n",
@@ -610,29 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mean Squared Error: 660696070.7809154\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Make predictions\n",
-    "predictions = model.predict(X_test)\n",
-    "\n",
-    "# Calculate MSE\n",
-    "mse = mean_squared_error(y_test, predictions)\n",
-    "print(\"Mean Squared Error:\", mse)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -640,17 +629,17 @@
      "output_type": "stream",
      "text": [
       "         Feature  Importance\n",
-      "16   OverallQual   20.834391\n",
-      "45     GrLivArea   16.266512\n",
-      "37   TotalBsmtSF    6.498004\n",
-      "33    BsmtFinSF1    5.146653\n",
-      "42      1stFlrSF    4.340842\n",
+      "16   OverallQual   21.458480\n",
+      "45     GrLivArea   17.153099\n",
+      "37   TotalBsmtSF    5.644861\n",
+      "33    BsmtFinSF1    4.968758\n",
+      "42      1stFlrSF    4.419964\n",
       "..           ...         ...\n",
-      "47  BsmtHalfBath    0.008490\n",
-      "4         Street    0.007942\n",
-      "38       Heating    0.005623\n",
-      "8      Utilities    0.002009\n",
-      "74       MiscVal    0.000600\n",
+      "73   MiscFeature    0.013106\n",
+      "44  LowQualFinSF    0.011376\n",
+      "4         Street    0.005609\n",
+      "74       MiscVal    0.000865\n",
+      "8      Utilities    0.000840\n",
       "\n",
       "[79 rows x 2 columns]\n"
      ]
@@ -663,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -807,7 +796,7 @@
        "[3 rows x 79 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -823,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -855,27 +844,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1461</td>\n",
-       "      <td>117695.335545</td>\n",
+       "      <td>117525.778059</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1462</td>\n",
-       "      <td>166132.683353</td>\n",
+       "      <td>164646.564414</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1463</td>\n",
-       "      <td>190793.881826</td>\n",
+       "      <td>189288.738346</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>1464</td>\n",
-       "      <td>192280.664060</td>\n",
+       "      <td>195433.785009</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>1465</td>\n",
-       "      <td>182000.003951</td>\n",
+       "      <td>180462.706093</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -883,14 +872,14 @@
       ],
       "text/plain": [
        "     Id      SalePrice\n",
-       "0  1461  117695.335545\n",
-       "1  1462  166132.683353\n",
-       "2  1463  190793.881826\n",
-       "3  1464  192280.664060\n",
-       "4  1465  182000.003951"
+       "0  1461  117525.778059\n",
+       "1  1462  164646.564414\n",
+       "2  1463  189288.738346\n",
+       "3  1464  195433.785009\n",
+       "4  1465  180462.706093"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -898,7 +887,7 @@
    "source": [
     "sample_submission_df = pd.read_csv('data/house-prices/sample_submission.csv')\n",
     "sample_submission_df['SalePrice'] = model.predict(test_data)\n",
-    "sample_submission_df.to_csv('working/catboost-rf-poisson-cv.csv', index=False)\n",
+    "sample_submission_df.to_csv('working/catboost-rf-poisson-subsample09-iter3000.csv', index=False)\n",
     "sample_submission_df.head()"
    ]
   },
