--- a/house-prices-catboost-cv.ipynb
+++ b/house-prices-catboost-cv.ipynb
@@ -5181,33 +5181,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0:\tlearn: 77830.9231784\ttotal: 8.45ms\tremaining: 16.9s\n",
-      "200:\tlearn: 19621.1566880\ttotal: 1.11s\tremaining: 9.92s\n",
-      "400:\tlearn: 15873.9585696\ttotal: 2.25s\tremaining: 8.96s\n",
-      "600:\tlearn: 13687.4017384\ttotal: 3.42s\tremaining: 7.96s\n",
-      "800:\tlearn: 12102.7279479\ttotal: 4.62s\tremaining: 6.92s\n",
-      "1000:\tlearn: 10809.8465478\ttotal: 5.76s\tremaining: 5.75s\n",
-      "1200:\tlearn: 9727.5903783\ttotal: 6.97s\tremaining: 4.64s\n",
-      "1400:\tlearn: 8850.0547883\ttotal: 8.17s\tremaining: 3.49s\n",
-      "1600:\tlearn: 8126.1649086\ttotal: 9.33s\tremaining: 2.33s\n",
-      "1800:\tlearn: 7510.9937075\ttotal: 10.5s\tremaining: 1.16s\n",
-      "1999:\tlearn: 6977.3097168\ttotal: 11.7s\tremaining: 0us\n"
+      "0:\tlearn: 77830.9231784\ttotal: 190ms\tremaining: 15m 48s\n",
+      "200:\tlearn: 19621.1566880\ttotal: 18.4s\tremaining: 7m 18s\n",
+      "400:\tlearn: 15873.9585696\ttotal: 34.9s\tremaining: 6m 40s\n",
+      "600:\tlearn: 13687.4017384\ttotal: 51.1s\tremaining: 6m 13s\n",
+      "800:\tlearn: 12102.7279479\ttotal: 1m 8s\tremaining: 5m 57s\n",
+      "1000:\tlearn: 10809.8465478\ttotal: 1m 24s\tremaining: 5m 37s\n",
+      "1200:\tlearn: 9727.5903783\ttotal: 1m 41s\tremaining: 5m 19s\n",
+      "1400:\tlearn: 8850.0547883\ttotal: 1m 57s\tremaining: 5m 1s\n",
+      "1600:\tlearn: 8120.9075915\ttotal: 2m 14s\tremaining: 4m 44s\n",
+      "1800:\tlearn: 7514.0603512\ttotal: 2m 30s\tremaining: 4m 26s\n",
+      "2000:\tlearn: 6953.7405643\ttotal: 2m 46s\tremaining: 4m 9s\n",
+      "2200:\tlearn: 6407.4465215\ttotal: 3m 2s\tremaining: 3m 51s\n",
+      "2400:\tlearn: 5972.4132774\ttotal: 3m 18s\tremaining: 3m 34s\n",
+      "2600:\tlearn: 5593.8882221\ttotal: 3m 34s\tremaining: 3m 17s\n",
+      "2800:\tlearn: 5225.2106252\ttotal: 3m 52s\tremaining: 3m 2s\n",
+      "3000:\tlearn: 4861.6119076\ttotal: 4m 10s\tremaining: 2m 46s\n",
+      "3200:\tlearn: 4572.0152480\ttotal: 4m 27s\tremaining: 2m 30s\n",
+      "3400:\tlearn: 4319.9853175\ttotal: 4m 44s\tremaining: 2m 13s\n",
+      "3600:\tlearn: 4099.3563486\ttotal: 5m 2s\tremaining: 1m 57s\n",
+      "3800:\tlearn: 3869.3789710\ttotal: 5m 19s\tremaining: 1m 40s\n",
+      "4000:\tlearn: 3673.0627791\ttotal: 5m 37s\tremaining: 1m 24s\n",
+      "4200:\tlearn: 3487.0682879\ttotal: 5m 54s\tremaining: 1m 7s\n",
+      "4400:\tlearn: 3299.3197582\ttotal: 6m 11s\tremaining: 50.6s\n",
+      "4600:\tlearn: 3104.8186662\ttotal: 6m 29s\tremaining: 33.7s\n",
+      "4800:\tlearn: 2948.8991057\ttotal: 6m 46s\tremaining: 16.8s\n",
+      "4999:\tlearn: 2799.7545333\ttotal: 7m 3s\tremaining: 0us\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<catboost.core.CatBoostRegressor at 0x17f33f090>"
+       "<catboost.core.CatBoostRegressor at 0x7f9f803c6a10>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5217,7 +5232,9 @@
     "model = CatBoostRegressor(\n",
     "    cat_features=categorical_columns.to_list(),\n",
     "    verbose=200,\n",
-    "    **grid_search.best_params_\n",
+    "    depth=6,\n",
+    "    iterations=5000,\n",
+    "    learning_rate=0.03,\n",
     ")\n",
     "\n",
     "# Train the model\n",
@@ -5226,7 +5243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -5234,17 +5251,17 @@
      "output_type": "stream",
      "text": [
       "        Feature  Importance\n",
-      "16  OverallQual   19.919743\n",
-      "45    GrLivArea   13.670046\n",
-      "33   BsmtFinSF1    5.196254\n",
-      "42     1stFlrSF    4.217589\n",
-      "37  TotalBsmtSF    4.214202\n",
+      "16  OverallQual   19.564704\n",
+      "45    GrLivArea   13.472240\n",
+      "33   BsmtFinSF1    5.163041\n",
+      "37  TotalBsmtSF    4.191550\n",
+      "42     1stFlrSF    4.188364\n",
       "..          ...         ...\n",
-      "73  MiscFeature    0.007691\n",
-      "74      MiscVal    0.007065\n",
-      "4        Street    0.004909\n",
-      "21     RoofMatl    0.001953\n",
-      "8     Utilities    0.000667\n",
+      "73  MiscFeature    0.010762\n",
+      "74      MiscVal    0.008921\n",
+      "4        Street    0.004803\n",
+      "21     RoofMatl    0.003442\n",
+      "8     Utilities    0.000655\n",
       "\n",
       "[79 rows x 2 columns]\n"
      ]
@@ -5257,7 +5274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -5401,7 +5418,7 @@
        "[3 rows x 79 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5417,7 +5434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -5449,27 +5466,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1461</td>\n",
-       "      <td>119401.989434</td>\n",
+       "      <td>118816.407807</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1462</td>\n",
-       "      <td>162783.970239</td>\n",
+       "      <td>164408.558168</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1463</td>\n",
-       "      <td>188167.116705</td>\n",
+       "      <td>188990.668309</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>1464</td>\n",
-       "      <td>192417.233092</td>\n",
+       "      <td>193002.001939</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>1465</td>\n",
-       "      <td>188142.301060</td>\n",
+       "      <td>185633.950676</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -5477,14 +5494,14 @@
       ],
       "text/plain": [
        "     Id      SalePrice\n",
-       "0  1461  119401.989434\n",
-       "1  1462  162783.970239\n",
-       "2  1463  188167.116705\n",
-       "3  1464  192417.233092\n",
-       "4  1465  188142.301060"
+       "0  1461  118816.407807\n",
+       "1  1462  164408.558168\n",
+       "2  1463  188990.668309\n",
+       "3  1464  193002.001939\n",
+       "4  1465  185633.950676"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5492,7 +5509,7 @@
    "source": [
     "sample_submission_df = pd.read_csv('data/house-prices/sample_submission.csv')\n",
     "sample_submission_df['SalePrice'] = model.predict(test_data)\n",
-    "sample_submission_df.to_csv('working/catboost-cv-more.csv', index=False)\n",
+    "sample_submission_df.to_csv('working/catboost-cv-iter5000.csv', index=False)\n",
     "sample_submission_df.head()"
    ]
   }
@@ -5513,7 +5530,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
